# Astur

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: release.yml
crates/astur/: Cargo.toml  astur.rc  build.rs
crates/astur-config/: Cargo.toml
crates/astur-config/src/: lib.rs
crates/astur-settings/: Cargo.toml  astur-settings.rc  build.rs
crates/astur-settings/src/: main.rs
crates/astur/src/: layout.rs  main.rs
packaging/: astur.iss
plan/: README.md  animations.md  architecture.md  competitors.md  decisions.md  editions.md  ideas.md  known-issues.md  launcher.md  mods.md  optimization.md  roadmap-v2.md  system-menu.md  win32-reference.md
src/: config.rs  layout.rs  main.rs
