[package]
name = "suprland"
version = "0.3.2"
edition = "2021"
description = "Hyprland-style Alt-drag move/resize + tiling window manager for Windows"
license = "Apache-2.0"
homepage = "https://suprland.com"
repository = "https://github.com/Page011/Suprland"
keywords = ["windows", "tiling", "window-manager", "alt-drag"]
categories = ["os::windows-apis"]

[[bin]]
name = "suprland"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_System_SystemInformation",
    "Win32_System_Power",
    "Win32_Media",
]
