[workspace]
resolver = "2"
members = [
    "crates/astur",          # the window manager (the binary users run)
    "crates/astur-config",   # shared config parsing (WM + settings GUI)
    "crates/astur-settings", # settings GUI (egui) — WIP
]

# Release profile applies workspace-wide. The WM still ships tiny: LTO, strip,
# panic=abort, single codegen unit. (Astur Lite = the frozen v1.0.0 tag.)
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
