[package]
name = "astur-settings"
version = "2.0.0-dev"
edition = "2021"
description = "Astur settings GUI — friendly editor for astur.conf (egui, WIP)"
license = "Apache-2.0"

[[bin]]
name = "astur-settings"
path = "src/main.rs"

# egui/eframe + the shared astur-config dependency get added when the GUI is built
# (see plan/roadmap-v2.md). Kept dependency-free for now so the workspace stays fast.
