[package]
name = "astur-settings"
version = "2.1.2"
edition = "2021"
description = "Astur settings GUI — friendly editor for astur.conf / navbar.conf"
license = "Apache-2.0"

[[bin]]
name = "astur-settings"
path = "src/main.rs"

[build-dependencies]
# Embeds the Astur hawk icon into the exe (same icon as the WM).
embed-resource = "2"

[dependencies]
astur-config = { path = "../astur-config" }
eframe = "0.31"
