[package]
name = "astur"
version = "2.1.2"
edition = "2021"
description = "Alt-drag move/resize + tiling window manager for Windows"
license = "Apache-2.0"
homepage = "https://astur.app"
repository = "https://github.com/Page011/Astur"
keywords = ["windows", "tiling", "window-manager", "alt-drag"]
categories = ["os::windows-apis"]

[[bin]]
name = "astur"
path = "src/main.rs"

[build-dependencies]
# Embeds the app icon (assets/astur.ico) into the exe so Explorer, the taskbar,
# Alt+Tab, and shortcuts show the Astur hawk instead of the default exe icon.
embed-resource = "2"

[dependencies]
astur-config = { path = "../astur-config" }

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_System_SystemInformation",
    "Win32_System_Power",
    "Win32_Media",
    "Win32_Storage_Xps",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_Controls",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_Search",
    "Win32_System_Shutdown",
    "Win32_Security",
    "Win32_System_Registry",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Pipes",
    "Win32_System_IO",
]
